# dialob-api/src/main/resources/swagger.yaml
@@ -293,8 +293,8 @@ paths:
           required: true
           type: string
         - in: body
-          name: formTag
-          description: formTag
+          name: param1
+          description: param1
           required: true
           schema:
             $ref: '#/definitions/FormTag'
@@ -1143,7 +1143,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/FormValueSet'
+              $ref: '#/definitions/ValueSet'
         '403':
           description: Access denied
           schema:
@@ -1178,7 +1178,7 @@ paths:
         '200':
           description: OK
           schema:
-            $ref: '#/definitions/FormValueSet'
+            $ref: '#/definitions/ValueSet'
         '403':
           description: Access denied
           schema:
@@ -1265,7 +1265,7 @@ definitions:
       value:
         type: object
     title: ContextValue
-  FormValueSetEntry:
+  Entry:
     type: object
     required:
       - id
@@ -1280,7 +1280,7 @@ definitions:
           type: string
       value:
         type: string
-    title: Entry
+    title: FormValueSetEntry
   Error:
     type: object
     properties:
@@ -1496,6 +1496,8 @@ definitions:
         type: string
       formId:
         type: string
+      formName:
+        type: string
       formRev:
         type: string
       label:
@@ -1666,16 +1668,12 @@ definitions:
     properties:
       endIndex:
         type: integer
+      expression:
+        type: string
       index:
         type: integer
       itemId:
         type: string
-      message:
-        type: string
-      expression:
-        type: string
-      startIndex:
-        type: integer
       level:
         type: string
         enum:
@@ -1683,6 +1681,10 @@ definitions:
           - WARNING
           - ERROR
           - FATAL
+      message:
+        type: string
+      startIndex:
+        type: integer
       type:
         type: string
         enum:
@@ -1718,25 +1720,13 @@ definitions:
       id:
         type: string
     title: FormValueSet
-  ValueSetEntry:
-    type: object
-    required:
-      - key
-    properties:
-      key:
-        type: string
-      value:
-        type: string
-    title: ValueSetEntry
   ValueSet:
     type: object
-    required:
-      - id
     properties:
       entries:
         type: array
         items:
-          $ref: '#/definitions/ValueSetEntry'
+          $ref: '#/definitions/FormValueSetEntry'
       id:
         type: string
     title: ValueSet
